iaac/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: test-g
  labels:
    name: test-g
