iaac/deployment_balance_grpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-balance-grpc
  namespace: test-g
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: go-balance-grpc
  template:
    metadata:
      labels:
        app: go-balance-grpc
        version: "go-balance-grpc"
    spec:
      containers:
      - name: go-balance-grpc
        imagePullPolicy: Never
        image: go_balance_grpc
        resources:
           requests:
             cpu: 250m
             memory: 100Mi
           limits:
             cpu: 500m
             memory: 200Mi
        ports:
        - containerPort: 50051
      terminationGracePeriodSeconds: 60
