iaac/service_balance_grpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-go-balance-grpc
  namespace: test-g
spec:
  ports:
  - name: svc-go-balance-grpc
    port: 50051
    targetPort: 50051
  selector:
    app: go-balance-grpc
  type: LoadBalancer
