iaac/service_rate_grpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-go-rate-grpc
  namespace: test-g
spec:
  ports:
  - name: svc-go-rate-grpc
    port: 60051
    targetPort: 60051
  selector:
    app: go-rate-grpc
  type: LoadBalancer
